logs/newschimp.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/NewsChimp-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/mailchimp-2.0.9.egg-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/newschimp'...
Listing './lib/python3.5/site-packages/newschimp/social'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/selenium'...
Listing './lib/python3.5/site-packages/selenium/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver'...
Listing './lib/python3.5/site-packages/selenium/webdriver/android'...
Listing './lib/python3.5/site-packages/selenium/webdriver/blackberry'...
Listing './lib/python3.5/site-packages/selenium/webdriver/chrome'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/actions'...
Listing './lib/python3.5/site-packages/selenium/webdriver/common/html5'...
Listing './lib/python3.5/site-packages/selenium/webdriver/edge'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/amd64'...
Listing './lib/python3.5/site-packages/selenium/webdriver/firefox/x86'...
Listing './lib/python3.5/site-packages/selenium/webdriver/ie'...
Listing './lib/python3.5/site-packages/selenium/webdriver/opera'...
Listing './lib/python3.5/site-packages/selenium/webdriver/phantomjs'...
Listing './lib/python3.5/site-packages/selenium/webdriver/remote'...
Listing './lib/python3.5/site-packages/selenium/webdriver/safari'...
Listing './lib/python3.5/site-packages/selenium/webdriver/support'...
Listing './lib/python3.5/site-packages/selenium/webdriver/webkitgtk'...
Listing './lib/python3.5/site-packages/selenium-3.8.1.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smartypants-2.0.1.dist-info'...
Listing './lib/python3.5/site-packages/typogrify'...
Listing './lib/python3.5/site-packages/typogrify/packages'...
Listing './lib/python3.5/site-packages/typogrify/packages/titlecase'...
Listing './lib/python3.5/site-packages/typogrify/templatetags'...
Listing './lib/python3.5/site-packages/typogrify-2.0.7.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './selenium'...
Listing './selenium/webdriver'...
Listing './selenium/webdriver/firefox'...
Listing './selenium/webdriver/firefox/amd64'...
Listing './selenium/webdriver/firefox/x86'...
Listing './selenium/webdriver/remote'...
Listing './share'...
Listing './share/python-wheels'...
